# VideoSubFinder-python

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  README_Python.md  color_filtration.py  demo  demo.py  demo_optimized.py  my_demo.cpp  requirements.txt  subtitle_detector.py  test_detector.py  test_opencv.cpp
Components/IPAlgorithms/: IPAlgorithms.cpp
Interfaces/VideoSubFinderWXW/: VideoSubFinderWXW.cpp
source_vsf/Components/IPAlgorithms/: SSAlgorithms.cpp
source_vsf/Components/Include/: DataTypes.h
test/: test_detector.py
video_sub_finder/: config.yaml  subtitle_detector.py
video_sub_finder/IPAlgorithms/: config.py  utils.py
video_sub_finder/utils/: utils.py
vsf_cpp/IPAlgorithms/: IPAlgorithms.cpp  IPAlgorithms.h
